# mysylarserver

./: .clang-format  .gitignore  CMakeLists.txt  GPATH  GRTAGS  GTAGS  Makefile  log.txt  sylar_server.mdj
.cache/clangd/index/: log.cpp.B367C365ACC13F46.idx  log.h.4CA172C32015865E.idx  test_log.cpp.3D778BC5AD9E37D1.idx
src/: SingleTon.h  util.cpp  util.h
src/log/: Log.h  LogAppender.cpp  LogAppender.h  LogEvent.cpp  LogEvent.h  LogFormatter.cpp  LogFormatter.h  LogLevel.cpp  LogLevel.h  Logger.cpp  Logger.h
test/: test_log.cpp
